# gitmind

./: .gitignore  CLAUDE.md  README.md  learnings.md  memory.md  pyproject.toml
docs/plans/: 2026-03-17-github-analyzer-design.md  2026-03-17-github-analyzer-implementation.md
github_analyzer/: __init__.py  cli.py  fetcher.py  models.py  reporter.py  scorer.py  summarizer.py
tests/: conftest.py  test_cli.py  test_fetcher.py  test_models.py  test_reporter.py  test_scorer.py  test_summarizer.py
